--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         if: always()
         uses: 8398a7/action-slack@v3
         with:
-          status: always
+          status: custom
           text: 'GitHub Action: A message was echoed.'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
